 - Buffed Double Slash's damage by 25% and nerfed Focused Slash's damage by 16.6%.
  ~ These changes make Double Slash a relevant skill again, as it does more damage than Focused Slash even if it only hits once. Focused Slash's CRI boost, lower MP cost, and guaranteed hit make the choice between the skills dependant on playstyle.
 - Buffed Rejuvenation's HRG increase from +5% to +10%.
 - Nerfed Purify's MP cost to 15 MP (was originally 8 MP).
 - Nerfed Curify MP cost to 30 MP (was originally 18 MP).
 - Nerfed Mana Refund's MP cost to 50 MP (was originally 15 MP).
 - Nerfed Mana Refund's MP recovery to 1% of damage dealt (was originally 5%).
 - Nerfed Foresight's MP cost to 12 MP (was originally 8 MP).
 - Nerfed Inspire's effect to +10% ATK and MAT (was originally +12%).
 - Nerfed Lightning II's MP cost to 30 MP (was originally 22 MP).
 - Nerfed Gust's damage by 16.6%.
 - Increased Critical Heal I's max effectiveness from +10% to +20%.
 - Replaced The Warden's Darkfire with Engulfing Darkness, which is mechanically the same skill, except it does not debuff MDF.

RNG Balancing:
 - Made a lot of mechanics based around rare enemies a lot less grindy.
  ~ Quadrupled the base chance of encountering a rare enemy.
  ~ As rare enemy spawns fail, the spawn chance will increase exponentially, being reset once a rare enemy finally spawns.
  ~ Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
  ~ The Albino Rat and Strange Goblin have been rebalanced to be around the same difficulty as the Rainbow Slime.
 - Buffed the drop rate of all resistance accessories from 2% to 3.33%.

Miscellaneous Balancing:
 - You can no longer equip more than one of the same accessory on a single party member.
 - State resistance accessories no longer remove already applied states when equipped.
 - All party members now gain +1 INT per 5 levels, for a total of +20 INT at level 100 and +6 INT at Alpha 15's level cap of 30.