@@ -4420,7 +4420,7 @@
     "minTurns": 1,
     "motion": 0,
     "name": "Offensive Stance Handling",
-    "note": "<Custom Apply Effect>\ntarget._offensiveStance = target._offensiveStance || 0;\ntarget._offensiveStance = Math.min(3, target._offensiveStance + 1);\nstack = target._offensiveStance;\nswitch (stack) {\n  case 1:\n    target.addState(131);\n    break;\n  case 2:\n    target.removeState(131);\n    target.addState(132);\n    break;\n  case 3:\n    target.removeState(132);\n    target.addState(133);\n    break;\n  default:\n    break;\n}\n</Custom Apply Effect>",
+    "note": "<Custom Apply Effect>\ntarget._offensiveStance = target._offensiveStance || 0;\ntarget._offensiveStance = Math.min(3, target._offensiveStance + 1);\nstack = target._offensiveStance;\nswitch (stack) {\n  case 1:\n    target.addState(131);\n    break;\n  case 2:\n    target.removeState(131);\n    target.addState(132);\n    break;\n  case 3:\n    target.removeState(132);\n    target.addState(133);\n    break;\n  default:\n    break;\n}\n</Custom Apply Effect>\n\n<Custom Remove Effect>\ntarget._offensiveStance = 0;\n</Custom Remove Effect>",
     "overlay": 0,
     "priority": 0,
     "removeAtBattleEnd": true,
@@ -4438,22 +4438,22 @@
       {
         "code": 21,
         "dataId": 2,
-        "value": 1.1
+        "value": 1.2
       },
       {
         "code": 21,
         "dataId": 6,
-        "value": 1.1
+        "value": 1.2
       },
       {
         "code": 21,
         "dataId": 3,
-        "value": 0.9
+        "value": 0.8
       },
       {
         "code": 21,
         "dataId": 5,
-        "value": 0.9
+        "value": 0.8
       }
     ],
     "iconIndex": 30,
@@ -4465,7 +4465,7 @@
     "minTurns": 3,
     "motion": 0,
     "name": "Offensive Stance I",
-    "note": "<Category: buff>\n\n<Custom Remove Effect>\ntarget.removeState(130);\n</Custom Remove Effect>\n\n<Help Description>\nIncreases ATK and AGI by 10%. Decreases DEF and MDF by 10%. Can stack two more times.\n</Help Description>",
+    "note": "<Category: buff>\n\n<Custom Leave Effect>\ntarget.removeState(130);\n</Custom Leave Effect>\n\n<Help Description>\nIncreases ATK and AGI by 20%. Decreases DEF and MDF by 20%. Can stack two more times.\n</Help Description>",
     "overlay": 0,
     "priority": 30,
     "removeAtBattleEnd": true,
@@ -4483,22 +4483,22 @@
       {
         "code": 21,
         "dataId": 2,
-        "value": 1.2
+        "value": 1.4
       },
       {
         "code": 21,
         "dataId": 6,
-        "value": 1.2
+        "value": 1.4
       },
       {
         "code": 21,
         "dataId": 3,
-        "value": 0.8
+        "value": 0.6
       },
       {
         "code": 21,
         "dataId": 5,
-        "value": 0.8
+        "value": 0.6
       }
     ],
     "iconIndex": 746,
@@ -4510,7 +4510,7 @@
     "minTurns": 4,
     "motion": 0,
     "name": "Offensive Stance II",
-    "note": "<Category: buff>\n\n<Custom Remove Effect>\ntarget.removeState(130);\n</Custom Remove Effect>\n\n<Help Description>\nIncreases ATK and AGI by 20%. Decreases DEF and MDF by 20%. Can stack one more time.\n</Help Description>",
+    "note": "<Category: buff>\n\n<Custom Leave Effect>\ntarget.removeState(130);\n</Custom Leave Effect>\n\n<Help Description>\nIncreases ATK and AGI by 40%. Decreases DEF and MDF by 40%. Can stack one more time.\n</Help Description>",
     "overlay": 0,
     "priority": 30,
     "removeAtBattleEnd": true,
@@ -4528,22 +4528,22 @@
       {
         "code": 21,
         "dataId": 2,
-        "value": 1.3
+        "value": 1.6
       },
       {
         "code": 21,
         "dataId": 6,
-        "value": 1.3
+        "value": 1.6
       },
       {
         "code": 21,
         "dataId": 3,
-        "value": 0.7
+        "value": 0.4
       },
       {
         "code": 21,
         "dataId": 5,
-        "value": 0.7
+        "value": 0.4
       }
     ],
     "iconIndex": 747,
@@ -4555,7 +4555,7 @@
     "minTurns": 5,
     "motion": 0,
     "name": "Offensive Stance III",
-    "note": "<Category: buff>\n\n<Custom Remove Effect>\ntarget.removeState(130);\n</Custom Remove Effect>\n\n<Help Description>\nIncreases ATK and AGI by 30%. Decreases DEF and MDF by 30%. Fully stacked!\n</Help Description>",
+    "note": "<Category: buff>\n\n<Custom Leave Effect>\ntarget.removeState(130);\n</Custom Leave Effect>\n\n<Help Description>\nIncreases ATK and AGI by 60%. Decreases DEF and MDF by 60%. Fully stacked!\n</Help Description>",
     "overlay": 0,
     "priority": 30,
     "removeAtBattleEnd": true,
