@@ -404,6 +404,7 @@ Skill Balancing:
   ~ Additionally, this only lasts for 1 turn after using the skill, while the debuff used to last for 2 turns.
  - Buffed Double Slash's damage by 25% and nerfed Focused Slash's damage by 16.6%.
   ~ These changes make Double Slash a relevant skill again, as it does more damage than Focused Slash even if it only hits once. Focused Slash's CRI boost, lower MP cost, and guaranteed hit make the choice between the skills dependant on playstyle.
+ - Buffed Offensive Stance's stat increase/decrease per stack from 10% to 20%. It it also now capped to 3 stacks.
  - Buffed Rejuvenation's HRG increase from +5% to +10%.
  - Nerfed Purify's MP cost to 15 MP (was originally 8 MP).
  - Nerfed Curify MP cost to 30 MP (was originally 18 MP).
